test/files/neg/bug630.check
bug630.scala:20: error: overriding value foo in trait Bar of type Req2;
 object foo has incompatible type
        object foo extends Req1
               ^
one error found
